--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
 	<meta charset=UTF-8>
-	<title> I am Wei Hao Tan </title>
+	<title>Wei Hao</title>
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="Computer Science Undergraduate in National University of Singapore">
 	<meta name=keywords content="mark jeremiah robert, nus business analytics, web developer, resume, CV HTML template, personal, Singapore, markjrobby">
@@ -725,7 +725,7 @@
 				<div class=col-md-6>
 					<div class=contact-form>
 						<span>Interested? Me too! I am keen to talk to you to understand how I can contribute to your company. <br> Drop me a message!</span>
-						<form name=contact-form id=contactForm action=https://formspree.io/markjrobert@gmail.com method=POST>
+						<form name=contact-form id=contactForm action=https://formspree.io/tanweihao@u.nus.edu method=POST>
 							<div class=form-group>
 								<label for=name>Name</label>
 								<input type=text name=name class=form-control id=name required>
