Update with NUSChoir stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Wei Hao</title>
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="Computer Science Undergraduate in National University of Singapore">
-	<meta name=keywords content="mark jeremiah robert, nus business analytics, web developer, resume, CV HTML template, personal, Singapore, markjrobby">
+	<meta name=keywords content="tan wei hao, nus computer science, web developer, resume, CV HTML template, personal, Singapore, demitycho">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel=stylesheet type=text/css>
 	<link href=assets/bootstrap/css/bootstrap.min.css rel=stylesheet media=screen>
 	<link href=assets/css/font-awesome.min.css rel=stylesheet media=screen>
@@ -34,7 +34,7 @@
 			<div class=social-icons>
 				<ul class=list-inline>
 					<li><a href=https://www.facebook.com/demitycho target=_blank><i class="fa fa-facebook"></i></a></li>
-					<li><a href=https://www.linkedin.com/in/markjrobby/ target=_blank><i class="fa fa-linkedin"></i></a></li>
+					<li><a href=https://www.github.com/demitycho/ target=_blank><i class="fa fa-github"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -61,7 +61,7 @@
 						<li><a href=#about>About</a></li>
 						<li><a href=#resume>Credentials</a></li>
 						<li><a href=#skills>Skills</a></li>
-						<li><a href=#works>Works</a></li>
+						<li><a href=#projects>Projects</a></li>
 						<li><a href=#blog>Testimonial</a></li>
 						<li><a href=#contact>Contact</a></li>
 					</ul>
@@ -78,7 +78,7 @@
 						<div class=myphoto>
 							<img src=assets/images/Tan_Wei_Hao.jpg alt>
 						</div>
-						<ul>
+						<ul style="list-style: none;">
 							<li><strong>Name:</strong> Wei Hao Tan</li>
 							<li><strong>School:</strong> National University of Singapore</li>
 							<li><strong>Major:</strong> Computer Science</li>
@@ -91,8 +91,7 @@
 					<div class="short-info wow fadeInUp">
 						<h3>Who Am I?</h3>
 						<p> Hey there, I'm Wei Hao. I am currently a sophomore in the National University of Singapore (NUS) majoring in Computer Science. 
-							<!-- My undergraduate studies have let me to develop and coalesce both my passions in Technology and Business. It has also allowed me to wear different hats be it as part of project assignments -->
-						<!-- or past work experience. I can be said to be the jack-of-all-trades.  -->
+						I have passionsI can be said to be the jack-of-all-trades. 
 						</p>
 						<br></br>
 						<p> I am very keen on furthering this enterpreneurial journey that I have started and intend to found my own startup in the near future. I would want to improve on existing skills and pick up new ones during this internship experience. Moreover, I would like to understand the management workings and issues faced so that I too may be readily prepared when I manage my own company eventually.
@@ -104,13 +103,13 @@
 								<li>Software Engineering</li>
 								<li>UI/UX Design</li>
 								<li>Front-End Development</li>
-								<li>Back-End Develpoment</li>
+								<li>Back-End Development</li>
 								<li>Social Media Marketing</li>
 								<li>Project Management</li>
 							</ul>
 						</div>
 						<div class=download-button>
-							<a class="btn btn-primary btn-lg" href=/assets/Resume/resume.pdf download><i class="fa fa-download"></i>Download my cv</a>
+							<a class="btn btn-primary btn-lg" href="/assets/Resume/CV_Wei Hao_TAN.pdf" download><i class="fa fa-download"></i>Download my cv</a>
 						</div>
 					</div>
 				</div>
@@ -127,7 +126,7 @@
 						</div>
 						<div class=resume>
 							<ul class=timeline>
-								<li class=timeline-inverted>
+								<li>
 									<div class=posted-date>
 										<span class=month>May 2018 - Aug 2018 (not yet begun as of May 2018)</span>
 									</div>
@@ -146,7 +145,7 @@
 										</div>
 									</div>
 								</li>
-								<li>
+								<li class=timeline-inverted>
 									<div class=posted-date>
 										<span class=month>Jan 2018 - May 2018 (4mths)</span>
 									</div>
@@ -159,13 +158,37 @@
 											<div class=timeline-body>
 												<ul>
 													<li>Taught a tutorial class for "CS1010E: Programming Methodology" course, conducted in C</li>
-													<li>Invigilated examinations and conductd post-exam review sessions for course students</li> 
+													<li>Invigilated examinations and conducted post-exam review sessions for course students</li> 
 													<li>Marking duties for students' Practical Examinations<br/></li>
 												</ul>
 											</div>
 											<b>Key Takeaways:</b>
 											<br/>
-											As someone with much programming experience, O had learn to instruct students in programming by explaining the fundamental concepts in programming. This also helped me to reinforce my coding ability as I come across mistakes from beginner programmers. I had to learn to fully reframe concepts to students who did not easily grasp concepts
+											As someone with much programming experience, I had learn to instruct students in programming by explaining the fundamental concepts in programming. This also helped me to reinforce my coding ability as I come across mistakes from beginner programmers. I had to learn to fully reframe concepts to students who did not easily grasp concepts
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class=posted-date>
+										<span class=month>May 2017 - May 2018 (1yr)</span>
+									</div>
+									<div class="timeline-panel wow fadeInUp">
+										<div class=timeline-content>
+											<div class=timeline-heading>
+												<h3>IT Manager</h3>
+												<span>The NUSChoir, NUS</span>
+											</div>
+											<div class=timeline-body>
+												<ul>
+													<li>Managed IT-related affairs of The NUSChoir i.e. Photography, Video Recordings, NUSChoir Youtube Account</li>
+													<li>Managed the NUSChoir's social media marketing campaigns</li> 
+													<li>Designed marketing material i.e. visuals, posters, concert booklet<br/></li>
+													<li>Increase in concert attendance from previous year (+50 pax/+5%) 
+												</ul>
+											</div>
+											<b>Key Takeaways:</b>
+											<br/>
+											I learnt about design processes and how to take charge and manage people doing design work under me. I learnt photography, videography as well as social media marketing campaigns.
 										</div>
 									</div>
 								</li>
@@ -320,7 +343,7 @@
 				<div class=container>
 					<div class=row>
 						<div class=col-md-12>
-							<h2><span>I Am <br> </span>A Young Man on A Journey To Discover Himself and Success</h2>
+							<h2><span>I Am <br> </span>A Young Man on A Journey To Discover Himself</h2>
 						</div>
 					</div>
 				</div>
@@ -332,7 +355,7 @@
 				<div class=row>
 					<div class=col-md-6>
 						<div class=skill-progress>
-							<div class=skill-title><h3>Data Analytics</h3></div>
+							<div class=skill-title><h3>Software Engineering</h3></div>
 							<div class=progress>
 								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=80 aria-valuemin=0 aria-valuemax=100><span>80%</span>
 								</div>
@@ -341,37 +364,37 @@
 						<div class=skill-progress>
 							<div class=skill-title><h3>UI/UX Design</h3></div>
 							<div class=progress>
-								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=60 aria-valuemin=0 aria-valuemax=100><span>60%</span>
+								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=60 aria-valuemin=0 aria-valuemax=100><span>70%</span>
 								</div>
 							</div>
 						</div>
 						<div class=skill-progress>
 							<div class=skill-title><h3>Front-End Development</h3></div>
 							<div class=progress>
-								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=60 aria-valuemin=0 aria-valuemax=100><span>60%</span>
+								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=60 aria-valuemin=0 aria-valuemax=100><span>70%</span>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class=col-md-6>
 						<div class=skill-progress>
-							<div class=skill-title><h3>Digital Marketing</h3></div>
+							<div class=skill-title><h3>Back-End Development</h3></div>
 							<div class=progress>
-								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=70 aria-valuemin=0 aria-valuemax=100><span>70%</span>
+								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=70 aria-valuemin=0 aria-valuemax=100><span>50%</span>
 								</div>
 							</div>
 						</div>
 						<div class=skill-progress>
-							<div class=skill-title><h3>Business Development</h3></div>
+							<div class=skill-title><h3>Project Management</h3></div>
 							<div class=progress>
-								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=70 aria-valuemin=0 aria-valuemax=100><span>70%</span>
+								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=70 aria-valuemin=0 aria-valuemax=100><span>50%</span>
 								</div>
 							</div>
 						</div>
 						<div class=skill-progress>
-							<div class=skill-title><h3>Product Management</h3></div>
+							<div class=skill-title><h3>Social Media Marketing</h3></div>
 							<div class=progress>
-								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=75 aria-valuemin=0 aria-valuemax=100><span>75%</span>
+								<div class="progress-bar six-sec-ease-in-out" role=progressbar aria-valuenow=75 aria-valuemin=0 aria-valuemax=100><span>60%</span>
 								</div>
 							</div>
 						</div>
@@ -382,50 +405,42 @@
 				</div>
 				<div class="row more-skill text-center">
 					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class=chart data-percent=91 data-color=e74c3c>
-							<span class=percent></span>
+						<div class=chart data-percent=90 data-color="#FFD352">
+							<span class=percent>100</span>
 							<div class=chart-text>
-								<span>Creativity</span>
+								<span>Motivation</span>
 							</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class=chart data-percent=63 data-color=2ecc71>
-							<span class=percent></span>
-							<div class=chart-text>
-								<span>Leadership</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class=chart data-percent=100 data-color=3498db>
-							<span class=percent></span>
+						<div class=chart data-percent=100 data-color="#FFD352">
+							<span class=percent>100</span>
 							<div class=chart-text>
 								<span>Hunger</span>
 							</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class=chart data-percent=82 data-color=3498db>
-							<span class=percent></span>
-							<div class=chart-text>
-								<span>Self-Belief</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class=chart data-percent=76 data-color=3498db>
-							<span class=percent></span>
+						<div class=chart data-percent=76 data-color="#FFD352">
+							<span class=percent>99</span>
 							<div class=chart-text>
 								<span>Humour</span>
 							</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-2">
-						<div class=chart data-percent=90 data-color=3498db>
-							<span class=percent></span>
+						<div class=chart data-percent=91 data-color="#FFD352">
+							<span class=percent>85</span>
 							<div class=chart-text>
-								<span>Motivation</span>
+								<span>Creativity</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-2">
+						<div class=chart data-percent=63 data-color="#FFD352">
+							<span class=percent>70</span>
+							<div class=chart-text>
+								<span>Leadership</span>
 							</div>
 						</div>
 					</div>
@@ -694,15 +709,12 @@
 		<section id=blog class="latest-blog-section section-padding">
 			<div class=container>
 				<h2 class="blog-title wow fadeInUp">What Others Say<span> I Am</span></h2> <br>
-				<p><i>"Wei Hao is a dependable member who always rises to the occasion.
-				He puts in extra effort into his passions and does his best to help up and beyond his allocated responsibilities." </i><br>
-			- Ms Amanda Hsuing, Chairperson Sheares Hall Overseas Community Service Project </p>
-			<p><i>"Wei Hao was also an independent worker who required little supervision on tasks assigned to him. He was resourceful and exercised self-initiative." </i><br>
-			- Mr Loke Kok Beng, Deputy Superintendent, Singapore Police Force </p>
-			<p><i>"I feel that his ability to adapt to new roles and learn new skills fast makes it very easy for us to let Wei Hao take great responsibilities in our startup." </i><br>
-			- Ms Inez Wihardjo, COO and Co-Founder of BonAppetour, Ex-Alumni of NOC</p>
+				<p><i>"Wei Hao has a unique perspective unlike any I’ve seen. He brings a refreshing change and a fresh perspective to the company. Despite having no prior professional experience, he displays maturity and a staunch willingness to learn." </i><br>
+				- Mr Damien Cheok, Project Manager, Kydon Learning Institute</p>
+				<p><i>"I found it to be extremely innovative and had strong business potential. Their project was relatively technically challenging. However, the most impressive aspects about the project were the clean user interface and appealing user experience. It was evident that UI and UX were very carefully thought through and I found it to be impressive." </i><br>
+				- Mr Tan Tack Poh, Orbital Student Advisor</p>
 			<div class=download-button>
-				<a class="btn btn-primary btn-lg" href=/assets/Resume/CombinedTestimonials.pdf download><i class="fa fa-download"></i>Download My Full Testimonals</a>
+				<a class="btn btn-primary btn-lg" href=/assets/Resume/Testimonials.pdf download><i class="fa fa-download"></i>Download My Testimonals</a>
 			</div>
 		</div>
 	</section>
@@ -795,5 +807,17 @@
 		<script src=assets/js/jquery.fitvids.js></script>
 		<script src=assets/js/scripts.js></script>
 		<script>(function(d,e,j,h,f,c,b){d.GoogleAnalyticsObject=f;d[f]=d[f]||function(){(d[f].q=d[f].q||[]).push(arguments)},d[f].l=1*new Date();c=e.createElement(j),b=e.getElementsByTagName(j)[0];c.async=1;c.src=h;b.parentNode.insertBefore(c,b)})(window,document,"script","https://www.google-analytics.com/analytics.js","ga");ga("create","UA-98334443-1","auto");ga("send","pageview");</script>
+		<script>
+		    $(function() {
+		        $('.chart').easyPieChart({
+		            //your options goes here
+		            barColor:'#FFD352',
+		            scaleColor:false,
+		            lineWidth: 5,
+		            lineCap:'round',
+		            size: 140,
+		        });
+		    });
+		</script>
 	</body>
 	</html>
