--- a/index.html
+++ b/index.html
@@ -115,7 +115,17 @@
 				</div>
 			</div>
 		</section>
-		
+		<section class="hire-section2 text-center" data-stellar-vertical-offset=50 data-stellar-background-ratio=0.2>
+			<div class="hire-section2-bg">
+				<div class=container>
+					<div class=row>
+						<div class=col-md-12>
+							<h2><span>I Am</span><br/> a Star Perfomer</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section id=resume class="resume-section section-padding">
 			<div class=container>
 				<h2 class="section-title wow fadeInUp">Credentials</h2>
@@ -447,14 +457,14 @@
 				</div>
 			</div>
 		</section>
-		<!-- <section id=works class="works-section section-padding">
+		<section id="projects" class="works-section section-padding">
 			<div class=container>
-				<h2 class="section-title wow fadeInUp">Works</h2>
+				<h2 class="section-title wow fadeInUp">Projects</h2>
 				<ul class=list-inline id=filter>
-					<li><a class=active data-group=all>All</a></li>
+					<li><a id="test" data-group=web class=active>Web</a></li>
 					<li><a data-group=design>Design</a></li>
-					<li><a data-group=web>Web</a></li>
-					<li><a data-group=wireframes>Wireframes & Data Visualisation</a></li>
+					<li><a data-group=other>Other</a></li>
+					<li><a data-group=all>All</a></li>
 				</ul>
 				<div class=row>
 					<div id=grid>
@@ -463,12 +473,12 @@
 								<div class=portfolio>
 									<div class=tt-overlay></div>
 									<div class=links>
-										<a class=image-link href=assets/images/works/work1.png><i class="fa fa-search-plus"></i></a>
+										<a class=image-link href=assets/images/CarollingFull.png><i class="fa fa-search-plus"></i></a>
 										<a href=#><i class="fa fa-link"></i></a>
 									</div>
-									<img src=assets/images/works/work1.png alt=image>
+									<img src=assets/images/CarollingHalf.png alt=image>
 									<div class=portfolio-info>
-										<h5>BonAppetour Christmas Marketing Campaign on FB</h5>
+										<h5>The NUSChoir's Christmas Marketing Campaign</h5>
 									</div>
 								</div>
 							</div>
@@ -488,7 +498,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design"]'>
+						<!-- <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design"]'>
 							<div class=portfolio-bg>
 								<div class=portfolio>
 									<div class=tt-overlay></div>
@@ -518,17 +528,18 @@
 								</div>
 							</div>
 						</div>
+						 -->
 						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "web"]'>
 							<div class=portfolio-bg>
 								<div class=portfolio>
 									<div class=tt-overlay></div>
 									<div class=links>
-										<a class=image-link href=assets/images/works/Welcome.jpg><i class="fa fa-search-plus"></i></a>
-										<a href=#><i class="fa fa-link"></i></a>
+										<a class=image-link href=assets/images/Showcase.png><i class="fa fa-search-plus"></i></a>
+										<a href=https://showcaseyou.herokuapp.com/><i class="fa fa-link"></i></a>
 									</div>
-									<img src=assets/images/works/Welcome1.jpg alt=image>
+									<img src=assets/images/Showcasesmall.png alt=image>
 									<div class=portfolio-info>
-										<h5>Trip.ie Welcome Page</h5>
+										<h5>Showcase</h5>
 									</div>
 								</div>
 							</div>
@@ -538,12 +549,12 @@
 								<div class=portfolio>
 									<div class=tt-overlay></div>
 									<div class=links>
-										<a class=image-link href=assets/images/works/concierge.jpg><i class="fa fa-search-plus"></i></a>
-										<a href=#><i class="fa fa-link"></i></a>
+										<a class=image-link href=assets/images/RedditGuessr.png><i class="fa fa-search-plus"></i></a>
+										<a href=https://fausticsun.github.io/RedditGuessr/><i class="fa fa-link"></i></a>
 									</div>
-									<img src=assets/images/works/Concierge1.jpg alt=image>
+									<img src=assets/images/RedditGuessrsmall.png alt=image>
 									<div class=portfolio-info>
-										<h5>Trip.ie Menu Page</h5>
+										<h5>RedditGuessr</h5>
 									</div>
 								</div>
 							</div>
@@ -553,47 +564,18 @@
 								<div class=portfolio>
 									<div class=tt-overlay></div>
 									<div class=links>
-										<a class=image-link href=assets/images/works/Activity.jpg><i class="fa fa-search-plus"></i></a>
-										<a href=#><i class="fa fa-link"></i></a>
+										<a class=image-link href=assets/images/RedditGuessrsmall.png><i class="fa fa-search-plus"></i></a>
+										<a href=https://fausticsun.github.io/RedditGuessr/><i class="fa fa-link"></i></a>
 									</div>
-									<img src=assets/images/works/Activity1.jpg alt=image>
+									<img src=assets/images/RedditGuessr1small.png alt=image>
 									<div class=portfolio-info>
-										<h5>Trip.ie Activity Page</h5>
+										<h5>RedditGuessr Question</h5>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "web"]'>
-							<div class=portfolio-bg>
-								<div class=portfolio>
-									<div class=tt-overlay></div>
-									<div class=links>
-										<a class=image-link href=assets/images/works/Explore.jpg><i class="fa fa-search-plus"></i></a>
-										<a href=#><i class="fa fa-link"></i></a>
-									</div>
-									<img src=assets/images/works/Explore1.jpg alt=image>
-									<div class=portfolio-info>
-										<h5>Trip.ie Explore Page</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "web"]'>
-							<div class=portfolio-bg>
-								<div class=portfolio>
-									<div class=tt-overlay></div>
-									<div class=links>
-										<a class=image-link href=assets/images/works/Notepad.jpg><i class="fa fa-search-plus"></i></a>
-										<a href=#><i class="fa fa-link"></i></a>
-									</div>
-									<img src=assets/images/works/Notepad1.jpg alt=image>
-									<div class=portfolio-info>
-										<h5>Trip.ie Notepad Page</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "wireframes"]'>
+						
+						<!-- <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "other"]'>
 							<div class=portfolio-bg>
 								<div class=portfolio>
 									<div class=tt-overlay></div>
@@ -608,7 +590,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "wireframes"]'>
+						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "other"]'>
 							<div class=portfolio-bg>
 								<div class=portfolio>
 									<div class=tt-overlay></div>
@@ -623,7 +605,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "wireframes"]'>
+						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "other"]'>
 							<div class=portfolio-bg>
 								<div class=portfolio>
 									<div class=tt-overlay></div>
@@ -637,7 +619,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -647,35 +629,33 @@
 				<br>
 				<h2 class="section-title wow fadeInUp">Projects</h2>
 				<style>.floatRight{float:right;margin-left:20px;width:20%;height:20%}</style>
-				<img src=assets/images/works/trippy.jpg alt=image class=floatRight>
-				<h3>NUS Orbital Programme - Trip.ie</h3>
-				Trip.ie (pronounced Trip-py) is a web-application that was co-developed with my project partner as part of the summer-long Orbital Programme in NUS School of Computing.
-				Trip.ie helps travellers to plan their itenarary. Features of the app includ Kanban board styled To-Do list, Pinterest-like feed of proposed attractions and live collaborative
-				notepad editor. It was enriching experience because this programme used self-directed learning as the medium of instruction. This programme got me to believe that I could develop anything that I wanted and there was no limit
-				to my capabilities, even though at the point in time, I had only taken a introductory module in programming methodology (Python).
-				To view the app, please click <a href=https://tripie.herokuapp.com target=_blank>here</a>.
+				<img src=assets/images/Showcasesmall.png alt=image class=floatRight>
+				<h3>NUS Orbital Programme - Showcase</h3>
+				Showcase is a web-application that was co-developed with my project partner as part of the summer-long Orbital Programme in NUS School of Computing.
+				People upload "Showcases" to our website. They can attach links to tags to the products featured in the image. This was
+				to help people expedite the process of product discovery to purchasing of products.
+				It was enriching experience because this programme used self-directed learning as the medium of instruction. This programme got me to believe that I could develop anything that I wanted. It gives me immense self-satisfaction to bring to fruition something of our own design
+				To view the app, please click <a href=https://showcaseyou.herokuapp.com target=_blank>here</a>.
 				<br></br>
 				<br></br>
 				<br>
 				<img src=assets/images/works/BT1101.jpg alt=image class=floatRight>
-				<h3>BT1101 Introduction to Computer Science - Module Project</h3>
-				This was my first foray into handling large datasets for analysis and were introducted to tools like Excel and R. We worked on data from 2004 comScore Disaggregate Dataset from the Wharton Research Data Services. Our objective was
-				to build models that could effectively and accurately recommend products to customers based on their demographics. We had made used of techniques such as clustering and association rule mining
-				to build a robust enough model. The challenge faced in this project was in sampling a right size of the data to be used for analysis instead of using the full dataset due to computational and time restraints.
-				To view the report, please click <a href=../markjrobby.github.io/assets/Resume/BT1101Group4Project.pdf target=_blank>here</a>.
+				<h3>CS2103 Software Engineering Module Project - Codeducator</h3>
+				This was my first major software engineering module. Here I worked in a team of 4 to improve upon a contacts manager application in Java. I learnt to be proficient in using GitHub for revision control. Industry-standard practices of good coding styles, patterns and design were taught and tested. I also learnt how to debug and implement Testing for application features in Java. I learnt to produce formal documentation for software products 
+				To view the report, please click <a href="https://github.com/CS2103JAN2018-W09-B3/main" target=_blank>here</a>.
 				<br></br>
 				<br></br>
 				<br>
-				<img src=assets/images/works/BT2101.jpg alt=image class=floatRight>
+				<!-- <img src=assets/images/works/BT2101.jpg alt=image class=floatRight>
 				<h3>BT2101 IT & Decision Making - Module Project</h3>
 				For this project, my group worked on analysing the effects of popular ride-sharing applications in Singapore, such as Uber and Grab, had on the local taxi company ComfortDelgro. We had
 				to obtain relevant data ourselves and used packages on R to scrape data of Facebook and Twitter for social media analysis where we ran sentiment analysis as well as understanding social media
 				strategies of ComfortDelgro's competitors. We also pulled live available taxi location data from the Land Transport Authority of Singapore from their API using Python and plotted them as heatmaps. The challenge for this
 				project was in obtaining relevant data and using our creativity to obtain specific data. For example, as we could not obtain age data from Facebook, we used the Microsoft Project Oxford package on RStudio
 				to run facial recognition on the display pictures of the followers of the competitors on Twitter. Although this may not be totally accurate, it provided us with additional insights into the customers'
-				demographics. To view the report, please click <a href=../markjrobby.github.io/assets/Resume/BT2101.pdf target=_blank>here</a>.
+				demographics. To view the report, please click <a href=../markjrobby.github.io/assets/Resume/BT2101.pdf target=_blank>here</a>. -->
 			</div>
-		</section> -->
+		</section>
 		<section id=facts class="facts-section text-center" data-stellar-vertical-offset=50 data-stellar-background-ratio=0.2>
 			<div class=tt-overlay-bg>
 				<div class=container>
@@ -710,7 +690,7 @@
 			<div class=container>
 				<h2 class="blog-title wow fadeInUp">What Others Say<span> I Am</span></h2> <br>
 				<p><i>"Wei Hao has a unique perspective unlike any I’ve seen. He brings a refreshing change and a fresh perspective to the company. Despite having no prior professional experience, he displays maturity and a staunch willingness to learn." </i><br>
-				- Mr Damien Cheok, Project Manager, Kydon Learning Institute</p>
+				- Mr Damien Cheok, Operations Manager, Kydon Learning Institute</p>
 				<p><i>"I found it to be extremely innovative and had strong business potential. Their project was relatively technically challenging. However, the most impressive aspects about the project were the clean user interface and appealing user experience. It was evident that UI and UX were very carefully thought through and I found it to be impressive." </i><br>
 				- Mr Tan Tack Poh, Orbital Student Advisor</p>
 			<div class=download-button>
@@ -806,7 +786,7 @@
 		<script src=assets/js/jquery.magnific-popup.min.js></script>
 		<script src=assets/js/jquery.fitvids.js></script>
 		<script src=assets/js/scripts.js></script>
-		<script>(function(d,e,j,h,f,c,b){d.GoogleAnalyticsObject=f;d[f]=d[f]||function(){(d[f].q=d[f].q||[]).push(arguments)},d[f].l=1*new Date();c=e.createElement(j),b=e.getElementsByTagName(j)[0];c.async=1;c.src=h;b.parentNode.insertBefore(c,b)})(window,document,"script","https://www.google-analytics.com/analytics.js","ga");ga("create","UA-98334443-1","auto");ga("send","pageview");</script>
+		<!-- <script>(function(d,e,j,h,f,c,b){d.GoogleAnalyticsObject=f;d[f]=d[f]||function(){(d[f].q=d[f].q||[]).push(arguments)},d[f].l=1*new Date();c=e.createElement(j),b=e.getElementsByTagName(j)[0];c.async=1;c.src=h;b.parentNode.insertBefore(c,b)})(window,document,"script","https://www.google-analytics.com/analytics.js","ga");ga("create","UA-98334443-1","auto");ga("send","pageview");</script> -->
 		<script>
 		    $(function() {
 		        $('.chart').easyPieChart({
@@ -817,6 +797,7 @@
 		            lineCap:'round',
 		            size: 140,
 		        });
+		        $( "#test" ).click()
 		    });
 		</script>
 	</body>
