--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 					<div class="short-info wow fadeInUp">
 						<h3>Who Am I?</h3>
 						<p> Hey there, I'm Wei Hao. I am currently a sophomore in the National University of Singapore (NUS) majoring in Computer Science. 
-						I have passionsI can be said to be the jack-of-all-trades. 
+						I have passion and experience in Software Engineering, Web development, I can be said to be the jack-of-all-trades. 
 						</p>
 						<br></br>
-						<p> I am very keen on furthering this enterpreneurial journey that I have started and intend to found my own startup in the near future. I would want to improve on existing skills and pick up new ones during this internship experience. Moreover, I would like to understand the management workings and issues faced so that I too may be readily prepared when I manage my own company eventually.
+						<p> I would love to embark on this enterpreneurial journey that I have started. My goal during during this internship experience is that I want to hone my existing tech skills and pick up new, non-tech ones. I would like to understand the management workings and issues faced.
 						</div>
 						<div class="short-info wow fadeInUp">
 							<h3>What Can I Do ?</h3>
-							<p>Although my primary expertise is in data analytics, I have had the opportunity to get my hands dirty in front-end development and digital marketing. These are the roles I am passionate about:</p>
+							<p>These are the roles I am passionate about:</p>
 							<ul class="list-check">
 								<li>Software Engineering</li>
 								<li>UI/UX Design</li>
