--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src=https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js></script>
 <script src=https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js></script>
 <![endif]-->
-<link rel="shortcut icon" href=assets/images/ico/favicon2.ico>
+<!-- <link rel="shortcut icon" href=assets/images/ico/favicon2.ico> -->
 </head>
 <body>
 	<div id=tt-preloader>
@@ -53,7 +53,7 @@
 						<span class=icon-bar></span>
 						<span class=icon-bar></span>
 					</button>
-					<a class=navbar-brand href=index.html>demitycho.github.io</a>
+					<a class=navbar-brand href=index.html>Wei Hao</a>
 				</div>
 				<div class="collapse navbar-collapse" id=custom-collapse>
 					<ul class="nav navbar-nav navbar-right">
